--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,10 @@
 
         <Button
 
-            android:onClick="buttonHandling"
-            android:id="@+id/bttn_send"
+            android:id="@+id/bttn_connect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="buttonHandling"
             android:text="Connect"
             android:visibility="visible" />
 
@@ -58,47 +58,47 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
+        style="@android:style/Widget.Material.ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="100dp"
+        android:fillViewport="true"
+        android:scrollbarStyle="insideOverlay"
+        android:visibility="visible">
 
-        <TextView
-            android:id="@+id/textView7"
+        <LinearLayout
+            android:id="@+id/linearLayout_messages"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text='>> "23-80-41-ae-fd-7e" ist beigetreten'
-            android:textColor="@android:color/holo_red_light"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=">> Moin Moin"
-            android:textColor="@android:color/holo_red_light"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=">> Moin Moin"
-            android:textColor="@color/colorHopA"
+            android:layout_height="92dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            android:showDividers="end"
             android:visibility="visible"
-            tools:textColor="@android:color/holo_red_light" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=">> Guten Tag"
-            android:textColor="@android:color/holo_blue_dark"
-            android:visibility="visible" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollY="100dp"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
+                android:text='>> "33-80-21-ae-5d-7e" ist beigetreten'
+                android:textColor="@android:color/holo_orange_dark"
+                android:visibility="visible" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollY="100dp"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
+                android:text='>> "23-80-41-ae-fd-7e" ist beigetreten'
+                android:textColor="@android:color/holo_red_light"
+                android:visibility="visible" />
+        </LinearLayout>
+
+    </ScrollView>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -114,7 +114,7 @@
             tools:targetApi="@android:color/holo_blue_light">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/editText_messages"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
