--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -2,10 +2,12 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -49,7 +51,7 @@
                     android:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/textView_frequenzy"
+                    android:id="@+id/textView_frequency"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -58,13 +60,15 @@
                     android:visibility="visible" />
 
                 <SeekBar
-                    android:id="@+id/seekBar2"
+                    android:id="@+id/seekBar_frequency"
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:max="10"
-                    android:progress="3" />
+                    android:max="3"
+                    android:onClick="syncTextViews"
+                    android:progress="3"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
@@ -92,10 +96,14 @@
                     android:visibility="visible" />
 
                 <SeekBar
-                    android:id="@+id/seekBar"
+                    android:id="@+id/seekBar_transmitPower"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4" />
+                    android:layout_weight="4"
+                    android:max="3"
+                    android:progress="3"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
@@ -110,11 +118,11 @@
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Channel"
+                    android:text="Bandwidth"
                     android:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/textView_channel"
+                    android:id="@+id/textView_bandwidth"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -123,10 +131,14 @@
                     android:visibility="visible" />
 
                 <SeekBar
-                    android:id="@+id/seekBar"
+                    android:id="@+id/seekBar_bandwidth"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4" />
+                    android:layout_weight="4"
+                    android:max="8"
+                    android:progress="9"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
@@ -145,7 +157,7 @@
                     android:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/textView_channel"
+                    android:id="@+id/textView_CRC"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -154,7 +166,7 @@
                     android:visibility="visible" />
 
                 <Switch
-                    android:id="@+id/switch1"
+                    android:id="@+id/switch_crc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
@@ -167,5 +179,17 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_saveSettings"
+        android:layout_width="349dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="SAve Settings"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
