--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
+        android:id="@+id/item_terminal"
+        android:title="Terminal" />
+    <item
         android:title="LORA Konfiguration"
         android:id="@+id/item_LoraKonfig"
         android:icon="@mipmap/ic_launcher_round"
