--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -61,13 +61,11 @@
 
                 <SeekBar
                     android:id="@+id/seekBar_frequency"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    style="@style/Widget.AppCompat.SeekBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:max="3"
-                    android:onClick="syncTextViews"
-                    android:progress="3"
                     android:visibility="visible" />
 
             </LinearLayout>
@@ -97,12 +95,11 @@
 
                 <SeekBar
                     android:id="@+id/seekBar_transmitPower"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    style="@style/Widget.AppCompat.SeekBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:max="3"
-                    android:progress="3"
                     android:visibility="visible" />
 
             </LinearLayout>
@@ -126,7 +123,7 @@
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="0"
+                    android:text="7.8KHz"
                     android:textAlignment="textStart"
                     android:visibility="visible" />
 
@@ -136,8 +133,75 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:max="8"
-                    android:progress="9"
+                    android:max="10"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Spreading"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/textView_spreading"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="64"
+                    android:textAlignment="textStart"
+                    android:visibility="visible" />
+
+                <SeekBar
+                    android:id="@+id/seekBar_spreading"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:max="7"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Error coding"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/textView_errorCoding"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="4/5"
+                    android:textAlignment="textStart"
+                    android:visibility="visible" />
+
+                <SeekBar
+                    android:id="@+id/seekBar_errorCoding"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:max="4"
                     android:visibility="visible" />
 
             </LinearLayout>
