--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#c2c2c2"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
 
     <fragment
@@ -17,7 +18,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="horizontal"
@@ -25,20 +26,23 @@
 
         <Button
 
-            android:id="@+id/bttn_connect"
+            android:id="@+id/bttn_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="buttonHandling"
-            android:text="Connect"
+            android:text="Test"
+            android:textSize="12sp"
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/bttn_reset"
+            android:id="@+id/bttn_setAddr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="buttonHandling"
-            android:text="Reset" />
+            android:text="version"
+            android:textSize="12sp"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/bttn_c"
@@ -46,7 +50,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="buttonHandling"
-            android:text="Button C" />
+            android:text="Button C"
+            android:textSize="12sp"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/bttn_d"
@@ -54,9 +60,34 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="buttonHandling"
-            android:text="Button D" />
+            android:text="Button D"
+            android:textSize="12sp"
+            android:visibility="visible" />
 
     </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        <LinearLayout
+            android:id="@+id/linearLayout_feedback"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="visible"></LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
