--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#c2c2c2"
     android:orientation="vertical"
     android:visibility="visible">
 
-
-    <fragment
-        android:id="@+id/map"
-        class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="8dp">
-
-        <Button
-
-            android:id="@+id/bttn_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="buttonHandling"
-            android:text="Test"
-            android:textSize="12sp"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/bttn_setAddr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="buttonHandling"
-            android:text="version"
-            android:textSize="12sp"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/bttn_c"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="buttonHandling"
-            android:text="Button C"
-            android:textSize="12sp"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/bttn_d"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="buttonHandling"
-            android:text="Button D"
-            android:textSize="12sp"
-            android:visibility="visible" />
-
-    </LinearLayout>
-
-    <ScrollView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout_feedback"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="visible"></LinearLayout>
-    </ScrollView>
+    </android.support.v4.view.ViewPager>
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
