--- a/app/src/main/res/layout/fragment_protocol.xml
+++ b/app/src/main/res/layout/fragment_protocol.xml
@@ -9,7 +9,7 @@
     android:visibility="visible">
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/terminal_scroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
