--- a/app/src/main/res/layout/fragment_terminal.xml
+++ b/app/src/main/res/layout/fragment_terminal.xml
@@ -5,7 +5,7 @@
     android:id="@+id/TerminalLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_google_signin_btn_text_light_pressed"
+    android:background="#ffd480"
     android:visibility="visible">
 
     <ScrollView
